fixed img alignment on mobile devices

--- a/style.css
+++ b/style.css
@@ -729,7 +729,9 @@ tr td {
     .col-md-6 {
         width: 100%;
     }
-    
+    .card-img-holder {
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 576px) {
